# ppslack

./: .gitignore  .python-version  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml  test.yml
ppslack/: __init__.py  main.py  slack.py
