[metadata]
name = ppslack
description = Tool to send messages via Slack
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
author = Peter Pakos
author-email = peter@pakos.uk
url = https://github.com/peterpakos/ppslack
keywords = slack message notification notify
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Communications :: Chat

[options]
include_package_data = True
packages = ppslack
install_requires =
    pplogger
    ppconfig
    slack_sdk

[options.entry_points]
console_scripts =
    ppslack = ppslack.main:main
    ppmail = ppslack.main:main

[bdist_wheel]
universal = 1

[aliases]
package = clean --all egg_info bdist_wheel sdist
